test_scores/negative_dimers/features/Q14498.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q14498.pkl.xz